@@ -4,6 +4,7 @@
 <title>Global Variables</title>
 <link rel="stylesheet" href="theme/style.css" type="text/css">
 <link rel="prev" href="smart_pointers.html">
+<link rel="next" href="adding_new_methods.html">
 </head>
 <body>
 <table width="100%" height="48" border="0" cellspacing="2">
@@ -20,7 +21,7 @@
   <tr>
     <td width="30"><a href="../index.html"><img src="theme/u_arr.gif" border="0"></a></td>
     <td width="30"><a href="smart_pointers.html"><img src="theme/l_arr.gif" border="0"></a></td>
-    <td width="20"><img src="theme/r_arr_disabled.gif" border="0"></td>
+    <td width="20"><a href="adding_new_methods.html"><img src="theme/r_arr.gif" border="0"></a></td>
    </tr>
 </table>
 <p>
@@ -36,7 +37,7 @@ functions, and export those.</p>
   <tr>
     <td width="30"><a href="../index.html"><img src="theme/u_arr.gif" border="0"></a></td>
     <td width="30"><a href="smart_pointers.html"><img src="theme/l_arr.gif" border="0"></a></td>
-    <td width="20"><img src="theme/r_arr_disabled.gif" border="0"></td>
+    <td width="20"><a href="adding_new_methods.html"><img src="theme/r_arr.gif" border="0"></a></td>
    </tr>
 </table>
 <br>
