@@ -1,3 +1,6 @@
+2 June 2003
+Added a new construct, add_method. See documentation.
+
 23 May 2003
 Support for global variables added.
 Various bug fixes.
@@ -7,8 +10,10 @@ Fixed bug where in a certain cases the GCCXMLParser would end up with multiple
 declarations of the same class
 
 22 Apr 2003
-- Now shows a warning when the user tries to export a forward-declared class. Forward-declared classes are ignored by the AllFromHeader construct.
-- Fixed a bug where classes, functions and enums where being exported, even if excluded from a AllFromHeader construct.
+- Now shows a warning when the user tries to export a forward-declared class.
+  Forward-declared classes are ignored by the AllFromHeader construct.
+- Fixed a bug where classes, functions and enums where being exported, even if
+  excluded from a AllFromHeader construct.
 
 16 Apr 2003
 Added a more generic (but ugly) code to declare the smart pointer converters.
